# python-to-bytecode

./: README.md  pyproject.toml  requirements.txt
src/: run.py
src/python_to_bytecode/: __init__.py  info.py  js_api.py
src/web/: index.css  index.html  script.js
