[project]
name = "python-to-bytecode"
description = "A little gui app I made in a couple hours that turns python code into bytecode."
authors = [
    {name = "Goldy", email = "goldy@devgoldy.me"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "importlib-metadata; python_version<'3.8'",
    "devgoldyutils>=2.3",
    "pywebview>=4.0.2"
]

dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/Goldy-Bot/Goldy-Bot-V5"
BugTracker = "https://github.com/Goldy-Bot/Goldy-Bot-V5/issues"
ChangeLog = "https://github.com/Goldy-Bot/Goldy-Bot-V5/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "src.python_to_bytecode.info.VERSION" }